tests/ui/fail/bad_nesting_1.rs
#[expandable::expr]
macro_rules! bad_nesting_example {
    ( $( $a:ident )? ) => { $( $a )* }
}

fn main() {}
